--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -232,7 +232,7 @@ jobs:
             DD_VERSION=${{ inputs.image_sha }}
           task-definition: ${{ steps.render-app-container-no-log.outputs.task-definition }}
           container-name: log_router
-          image: "public.ecr.aws/aws-observability/aws-for-fluent-bit:stable"
+          image: "public.ecr.aws/aws-observability/aws-for-fluent-bit:2.23.4"
 
       - name: Fill in the new tracer version in the Amazon ECS ${{ matrix.service }} task definition
         id: render-app-container
